리액트 JSX소개, 멀티엘리먼트, 엘리먼트찍기, JS와JX함께

--- a/REACT-BASIC/src/4.JS와 JX함께/market4.html
+++ b/REACT-BASIC/src/4.JS와 JX함께/market4.html
@@ -71,6 +71,9 @@
                         </div>
                     ))}
                 </div>
+                {
+                    modal === true ? <Modal /> : null
+                }
                 </>
             );
         }
