--- a/REDUX-BASIC/public/index.html
+++ b/REDUX-BASIC/public/index.html
@@ -10,6 +10,11 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <script
+      defer
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JS_KEY%"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
